Make jenkins agent more flexible (#1602)